Change height of sidebar

--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -83,7 +83,7 @@
         </div>
 
         {% if other_jobs %}
-        <div class="sm:my-4 py-6 px-4 max-h-80 border border-gray-200 rounded-md" style="background-color: white; height: max-content;">
+        <div class="sm:my-4 py-6 px-4 border border-gray-200 rounded-md" style="background-color: white; height: max-content;">
             <h1 class="mb-1 text-lg font-bold">Otros Trabajos en {{ object.company }}</h1>
             
             {% for job in other_jobs %}
