--- a/feline/templates/jobposts/company_detail.html
+++ b/feline/templates/jobposts/company_detail.html
@@ -82,7 +82,7 @@
         {% endif %}
     </div>
     <div class="md:w-1/3 ml-4 " >
-        <div class="sm:my-8 md:my-0 py-6 px-4 max-h-80 border border-gray-200 rounded-md" style="background-color: white; height: max-content;">
+        <div class="sm:my-8 md:my-0 py-6 px-4 border border-gray-200 rounded-md" style="background-color: white; height: max-content;">
             <h1 class="mb-1 text-lg font-bold">Sobre {{ object.name }}</h1>
             {% if object.company.company_url %}
                 <h4 class="font-bold mt-4">Website</h4>
