Remove partially rounded picture

--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -21,7 +21,7 @@
 <div class="flex flex-col sm:mx md:flex-row justify-start">
     <div class="w-full -auto md:w-2/3 py-6 px-4 mb-4 border border-gray-200 rounded-md" style="background-color: white;">
         <div class="flex justify-start pb-6 border-b border-b-gray-300">
-            <img class="w-16 h-16 rounded-sm border-solid border-gray-200 border6" src="{{ object.company.logo.url }}">
+            <img class="w-16 h-16 sm:w-20 sm:h-20 rounded-full" src="{{ object.company.logo.url }}">
 
             <div class="ml-4">
                 <a href="{{ object.company.get_absolute_url }}" class="text-2xl font-bold" style="color: #414141;">{{ object.company }}</a>
