Remove paginator from the posts for loop

--- a/feline/templates/jobposts/company_form.html
+++ b/feline/templates/jobposts/company_form.html
@@ -7,7 +7,7 @@
     Aqui va notificación crear compania es necesario
 {% endif %}
 
-<form action="{% url 'company-create' %}" method="post">
+<form action="{% url 'company-create' %}" enctype="multipart/form-data" method="post">
     {% csrf_token %}
     {{ form.non_field_errors }}
     {{ form.media }}
