--- a/feline/templates/jobposts/company_form.html
+++ b/feline/templates/jobposts/company_form.html
@@ -13,7 +13,7 @@
     {{ form.media }}
     {{ form }}
     <br/><br/>
-    <input type="submit" value="Crear compañía">
+    <input style="background-color: #F78C2C;" class="py-2 px-4 rounded font-bold text-white"  type="submit" value="Crear compañía">
 </form>
 
 
