--- a/feline/templates/jobposts/company_detail.html
+++ b/feline/templates/jobposts/company_detail.html
@@ -72,7 +72,7 @@
                     <h5 class="font-bold mt-4 text-xl">{{ job.title }}</h5>
                     <p class="font-light text-lg">{{ job.created | naturaltime }}</p>
                 </div>
-                <a class="border font-bold rounded-md border-gray-900 py-1 px-6" href="{{ job.get_absolute_url }}">Ver Detalles</a>
+                <a class="border font-bold rounded-md border-gray-900 py-1 px-6 text-black" href="{{ job.get_absolute_url }}">Ver Detalles</a>
             </div>
             {% endfor %}
         </div>
