--- a/feline/static/css/project.css
+++ b/feline/static/css/project.css
@@ -120,3 +120,41 @@ form.contact-form input[type=text] {
   form.contact-form input[type=text] {
     height: 56px;
     font-size: 20px; } }
+
+body .rich-text-description h1, body .rich-text-description h2, body .rich-text-description h3 {
+  font-weight: bold;
+  font-size: 30px;
+  font-size: 1.875rem;
+  line-height: 36px;
+  line-height: 2.25rem; }
+
+body .rich-text-description h4 {
+  font-weight: 600;
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 28px;
+  line-height: 1.75rem; }
+
+body .rich-text-description h5 {
+  font-weight: bold;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 24px;
+  line-height: 1.5rem; }
+
+body .rich-text-description h6 {
+  font-size: 14px;
+  font-size: 0.875rem;
+  line-height: 20px;
+  line-height: 1.25rem;
+  text-transform: uppercase; }
+
+body .rich-text-description p {
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 24px;
+  line-height: 1.5rem; }
+
+body .rich-text-description ul {
+  list-style-type: disc;
+  list-style-position: inside; }
