--- a/feline/static/sass/project.scss
+++ b/feline/static/sass/project.scss
@@ -173,3 +173,41 @@ form.contact-form input[type=text] {
       font-size: 20px;
     }
 }
+
+
+body .rich-text-description {
+
+  h1,h2, h3 {
+    font-weight: bold;
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  h4 {
+    font-weight: 600;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  h5 {
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  h6 {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    text-transform: uppercase;
+  }
+
+  p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  ul {
+    list-style-type: disc;
+    list-style-position: inside;
+  }
+}
