--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -19,7 +19,7 @@
 
 {% block content %}
 <div class="flex flex-col sm:mx md:flex-row justify-start">
-    <div class="w-full -auto md:w-2/3 py-6 px-4 mb-4 border border-gray-200 rounded-md" style="background-color: white;">
+    <div class="job-container w-full -auto md:w-2/3 py-6 px-4 mb-4 border border-gray-200 rounded-md" style="background-color: white;">
         <div class="flex justify-start pb-6 border-b border-b-gray-300">
             <img class="w-16 h-16 sm:w-20 sm:h-20 rounded-full" src="{{ object.company.logo.url }}">
 
@@ -55,17 +55,23 @@
             </div>
             
         </div>
+        
+        <div class="mt-6">
+            <h3 class="text-lg font-bold">Descripción</h3>
+            <div class="rich-text-description mb-6">
+                {{ object.description | safe }}
+            </div>
+        </div>
+
         {% if object.how_to_apply %}
         <div class="my-2">
             <h3 class="mt-8 mb-1 text-lg font-bold">Como aplicar</h3>
-            
+            <div class="rich-text-description mb-6">
             {{ object.how_to_apply | safe }}
+            </div>
         </div>
         {% endif %}
-        <div class="mt-6">
-            <h3 class="text-lg font-bold">Descripción</h3>
-            {{ object.description | safe }}
-        </div>
+
     </div>
     <div class="md:w-1/3 ml-4 " >
         <div class="sm:my-8 md:my-0 py-6 px-4 max-h-80 border border-gray-200 rounded-md" style="background-color: white; height: max-content;">
